[gd_scene format=3 uid="uid://d1d35a4aiirdi"]

[ext_resource type="Script" uid="uid://bbhrg8i6qpd4i" path="res://demo/player.gd" id="1_euw2q"]
[ext_resource type="Script" uid="uid://cuu8fg0sd6wrw" path="res://player-semilockedcam/player_animation_tree.gd" id="2_yji6d"]
[ext_resource type="PackedScene" uid="uid://bce2wsqbhhw17" path="res://assets/character/brickbot/char_brickbot_3.glb" id="4_uuw2b"]
[ext_resource type="PackedScene" uid="uid://bvqb4ofwl2w84" path="res://assets/character/brickbot/char_brickbot_2.glb" id="5_pdims"]
[ext_resource type="AudioStream" uid="uid://cbg0n1idhe64y" path="res://player sfx/advikgam-jump-up-245782.mp3" id="5_s4nun"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_kegl3"]
radius = 0.375
height = 1.5

[sub_resource type="SphereShape3D" id="SphereShape3D_yji6d"]
radius = 0.1

[sub_resource type="SphereShape3D" id="SphereShape3D_uuw2b"]
radius = 0.1

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_pdims"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_8dfyg"]
animation = &"Shoot-Right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_1ljby"]
animation = &"Run"

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_pnkql"]
filter_enabled = true
filters = ["metarig/Skeleton3D:forearm.L", "metarig/Skeleton3D:hand.L", "metarig/Skeleton3D:upper_arm.L"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_k6umv"]
graph_offset = Vector2(-9, 31)
nodes/output/position = Vector2(740, 140)
nodes/Blend2/node = SubResource("AnimationNodeBlend2_pnkql")
nodes/Blend2/position = Vector2(480, 60)
nodes/Animation/node = SubResource("AnimationNodeAnimation_1ljby")
nodes/Animation/position = Vector2(240, 60)
"nodes/Animation 2/node" = SubResource("AnimationNodeAnimation_8dfyg")
"nodes/Animation 2/position" = Vector2(240, 240)
node_connections = [&"Blend2", 0, &"Animation", &"Blend2", 1, &"Animation 2"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_8h4wj"]
animation = &"Run"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_4lcvt"]
animation = &"Melee-Right"

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_10qa6"]
filter_enabled = true
filters = ["metarig/Skeleton3D:forearm.R", "metarig/Skeleton3D:hand.R", "metarig/Skeleton3D:upper_arm.R"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_suds1"]
graph_offset = Vector2(-75, 23)
nodes/output/position = Vector2(640, 160)
nodes/Blend2/node = SubResource("AnimationNodeBlend2_10qa6")
nodes/Blend2/position = Vector2(400, 120)
nodes/Animation/node = SubResource("AnimationNodeAnimation_4lcvt")
nodes/Animation/position = Vector2(160, 80)
"nodes/Animation 2/node" = SubResource("AnimationNodeAnimation_8h4wj")
"nodes/Animation 2/position" = Vector2(160, 260)
node_connections = [&"output", 0, &"Blend2", &"Blend2", 0, &"Animation 2", &"Blend2", 1, &"Animation"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_pnkql"]
xfade_time = 0.01
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_teqhw"]
xfade_time = 0.01
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_e0xmq"]
"states/Big Sword/node" = SubResource("AnimationNodeBlendTree_pdims")
"states/Big Sword/position" = Vector2(323, 111)
states/End/position = Vector2(619, 120)
"states/Small Range/node" = SubResource("AnimationNodeBlendTree_k6umv")
"states/Small Range/position" = Vector2(323, 195)
states/Start/position = Vector2(43, 106)
states/Stick/node = SubResource("AnimationNodeBlendTree_suds1")
states/Stick/position = Vector2(323, 29)
transitions = ["Start", "Stick", SubResource("AnimationNodeStateMachineTransition_pnkql"), "Stick", "End", SubResource("AnimationNodeStateMachineTransition_teqhw")]
graph_offset = Vector2(-168, -49)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_yji6d"]
animation = &"Frozen"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_teqhw"]
animation = &"Fall to Land"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_1tglu"]
animation = &"FallingLoop"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_rrlce"]
animation = &"Jump"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_sctc2"]
animation = &"Jump"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_pnkql"]
animation = &"Run"

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_k6umv"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_eotev"]
graph_offset = Vector2(-93.32474, 11)
nodes/output/position = Vector2(700, 100)
"nodes/Animation 2/node" = SubResource("AnimationNodeAnimation_sctc2")
"nodes/Animation 2/position" = Vector2(280, 40)
nodes/Animation/node = SubResource("AnimationNodeAnimation_pnkql")
nodes/Animation/position = Vector2(280, 220)
nodes/Blend2/node = SubResource("AnimationNodeBlend2_k6umv")
nodes/Blend2/position = Vector2(480, 20)
node_connections = [&"output", 0, &"Blend2", &"Blend2", 0, &"Animation 2", &"Blend2", 1, &"Animation"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_1ghw3"]
animation = &"JumpToFall"

[sub_resource type="AnimationNodeAdd2" id="AnimationNodeAdd2_pdims"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_k6umv"]
animation = &"Run"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_eotev"]
animation = &"Fall to Land"

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_teqhw"]
graph_offset = Vector2(-52.54547, 9.545456)
nodes/output/position = Vector2(840, 120)
nodes/Animation/node = SubResource("AnimationNodeAnimation_eotev")
nodes/Animation/position = Vector2(320, 40)
nodes/Add2/node = SubResource("AnimationNodeAdd2_pdims")
nodes/Add2/position = Vector2(560, 80)
"nodes/Animation 2/node" = SubResource("AnimationNodeAnimation_k6umv")
"nodes/Animation 2/position" = Vector2(320, 220)
node_connections = [&"output", 0, &"Add2", &"Add2", 0, &"Animation", &"Add2", 1, &"Animation 2"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_qu6d7"]
animation = &"Run"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_qu6d7"]
xfade_time = 0.05
switch_mode = 2
advance_mode = 2
advance_expression = "velocity.y < 0"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_hcwj4"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_1ghw3"]
xfade_time = 0.05
advance_mode = 2
advance_expression = "is_on_floor()"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_eotev"]
xfade_time = 0.05
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_k6umv"]
xfade_time = 0.05
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_hcwj4"]
allow_transition_to_self = true
states/End/position = Vector2(939, 100)
"states/Fall to Land/node" = SubResource("AnimationNodeAnimation_teqhw")
"states/Fall to Land/position" = Vector2(767, 37)
states/FallingLoop/node = SubResource("AnimationNodeAnimation_1tglu")
states/FallingLoop/position = Vector2(610, 184)
states/Jump/node = SubResource("AnimationNodeAnimation_rrlce")
states/Jump/position = Vector2(309, 15)
states/JumpBlend/node = SubResource("AnimationNodeBlendTree_eotev")
states/JumpBlend/position = Vector2(322, 100)
states/JumpToFall/node = SubResource("AnimationNodeAnimation_1ghw3")
states/JumpToFall/position = Vector2(476, 100)
"states/Landing Blend/node" = SubResource("AnimationNodeBlendTree_teqhw")
"states/Landing Blend/position" = Vector2(664, 134)
states/Run/node = SubResource("AnimationNodeAnimation_qu6d7")
states/Run/position = Vector2(811, 143)
states/Start/position = Vector2(171, 100)
transitions = ["JumpToFall", "Fall to Land", SubResource("AnimationNodeStateMachineTransition_qu6d7"), "Run", "End", SubResource("AnimationNodeStateMachineTransition_hcwj4"), "Fall to Land", "End", SubResource("AnimationNodeStateMachineTransition_1ghw3"), "Start", "Jump", SubResource("AnimationNodeStateMachineTransition_eotev"), "Jump", "JumpToFall", SubResource("AnimationNodeStateMachineTransition_k6umv")]
graph_offset = Vector2(68, -33)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_s4nun"]
animation = &"Melee-Right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_uuw2b"]
animation = &"Run"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_0j7tx"]
animation = &"Run"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_yb033"]
animation = &"Run"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_0il8d"]
animation = &"Run"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_v8p82"]
animation = &"Frozen"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_8dfyg"]
blend_point_0/node = SubResource("AnimationNodeAnimation_uuw2b")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_0j7tx")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_yb033")
blend_point_2/pos = Vector2(0, -1)
blend_point_3/node = SubResource("AnimationNodeAnimation_0il8d")
blend_point_3/pos = Vector2(-1, 0)
blend_point_4/node = SubResource("AnimationNodeAnimation_v8p82")
blend_point_4/pos = Vector2(0, 0)

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_pdims"]
xfade_time = 0.02
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_s4nun"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_yb033"]
xfade_time = 0.05
advance_mode = 2
advance_expression = "move_direction"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_0j7tx"]
xfade_time = 0.05
advance_mode = 2
advance_expression = "!move_direction"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_v8p82"]
xfade_time = 0.05
switch_mode = 1
advance_mode = 2
advance_expression = "velocity.y == JUMP_SPEED"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8dfyg"]
xfade_time = 0.08
advance_mode = 2
advance_expression = "is_on_floor()"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_sctc2"]
xfade_time = 0.05
advance_mode = 2
advance_expression = "velocity.y == JUMP_SPEED"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_1ljby"]
xfade_time = 0.05
advance_mode = 2
advance_expression = "is_on_floor()"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_uuw2b"]
xfade_time = 0.02
advance_mode = 2
advance_expression = "rightAttack"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_yji6d"]
xfade_time = 0.05
switch_mode = 1
advance_mode = 2
advance_expression = "rightAttack"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_0il8d"]
xfade_time = 0.05
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_0il8d"]
"states/Attack State Machine/node" = SubResource("AnimationNodeStateMachine_e0xmq")
"states/Attack State Machine/position" = Vector2(770, 54)
states/End/position = Vector2(937, 147)
states/Frozen/node = SubResource("AnimationNodeAnimation_yji6d")
states/Frozen/position = Vector2(479, 210)
"states/Jump State Machine/node" = SubResource("AnimationNodeStateMachine_hcwj4")
"states/Jump State Machine/position" = Vector2(163, 147)
states/Melee-Right/node = SubResource("AnimationNodeAnimation_s4nun")
states/Melee-Right/position = Vector2(694, 417)
states/Running-Blend/node = SubResource("AnimationNodeBlendSpace2D_8dfyg")
states/Running-Blend/position = Vector2(479, 110)
states/Start/position = Vector2(479, 4)
transitions = ["Melee-Right", "Frozen", SubResource("AnimationNodeStateMachineTransition_pdims"), "Start", "Running-Blend", SubResource("AnimationNodeStateMachineTransition_s4nun"), "Frozen", "Running-Blend", SubResource("AnimationNodeStateMachineTransition_yb033"), "Running-Blend", "Frozen", SubResource("AnimationNodeStateMachineTransition_0j7tx"), "Running-Blend", "Jump State Machine", SubResource("AnimationNodeStateMachineTransition_v8p82"), "Jump State Machine", "Running-Blend", SubResource("AnimationNodeStateMachineTransition_8dfyg"), "Frozen", "Jump State Machine", SubResource("AnimationNodeStateMachineTransition_sctc2"), "Jump State Machine", "Frozen", SubResource("AnimationNodeStateMachineTransition_1ljby"), "Frozen", "Melee-Right", SubResource("AnimationNodeStateMachineTransition_uuw2b"), "Running-Blend", "Attack State Machine", SubResource("AnimationNodeStateMachineTransition_yji6d"), "Attack State Machine", "Running-Blend", SubResource("AnimationNodeStateMachineTransition_0il8d")]
graph_offset = Vector2(121.05606, -34)

[node name="Player" type="CharacterBody3D" unique_id=1046148302 groups=["player"]]
collision_mask = 7
script = ExtResource("1_euw2q")

[node name="CollisionShape3D" type="CollisionShape3D" parent="." unique_id=819164279]
shape = SubResource("CapsuleShape3D_kegl3")

[node name="FacingDirection" type="RayCast3D" parent="CollisionShape3D" unique_id=1548326875]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.58, -0.433)
target_position = Vector3(0, 0, -1)

[node name="CameraPivot" type="Node3D" parent="." unique_id=1731401337]

[node name="EdgeSpringArm" type="SpringArm3D" parent="CameraPivot" unique_id=1952750359]
transform = Transform3D(-4.371139e-08, 0, 1, 0, 1, 0, -1, 0, -4.371139e-08, 0, 0.75, 0)
collision_mask = 4
shape = SubResource("SphereShape3D_yji6d")
spring_length = 0.4

[node name="RearSpringArm" type="SpringArm3D" parent="CameraPivot/EdgeSpringArm" unique_id=1989440651]
transform = Transform3D(-4.371139e-08, 0, -1, 0, 1, 0, 1, 0, -4.371139e-08, 0, 0, 0)
collision_mask = 4
shape = SubResource("SphereShape3D_uuw2b")
spring_length = 1.3

[node name="Camera3D" type="Camera3D" parent="CameraPivot/EdgeSpringArm/RearSpringArm" unique_id=1310681344]
transform = Transform3D(1, 0, 0, 0, 0.99254614, 0.12186935, 0, -0.12186935, 0.99254614, 0, 0, 1.3)

[node name="LeftArmAttachment" type="Node3D" parent="." unique_id=178813499]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.6, 0, 0)

[node name="RightArmAttachment" type="Node3D" parent="." unique_id=2130059498]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.6, 0, 0)

[node name="SpecialAttachment" type="Node3D" parent="." unique_id=1328288580]

[node name="Animation" type="Node3D" parent="." unique_id=1356760414 node_paths=PackedStringArray("animation_tree")]
script = ExtResource("2_yji6d")
animation_tree = NodePath("../char_brickbot_3/AnimationTree")

[node name="old_char_brickbot_2" parent="." unique_id=496472428 instance=ExtResource("5_pdims")]
transform = Transform3D(-0.75, 0, -1.13246855e-07, 0, 0.75, 0, 1.13246855e-07, 0, -0.75, 0, -0.75, 0)
visible = false

[node name="char_brickbot_3" parent="." unique_id=783020879 instance=ExtResource("4_uuw2b")]
transform = Transform3D(-0.75, 0, -1.13246855e-07, 0, 0.75, 0, 1.13246855e-07, 0, -0.75, 0, -0.8323939, 0)

[node name="metarig" parent="char_brickbot_3" index="0" unique_id=1209981021]
transform = Transform3D(1, 0, 1.4210855e-14, 0, 1, 0, -1.4210855e-14, 0, 1, -0.020198822, 0, -3.0499374e-09)

[node name="Skeleton3D" parent="char_brickbot_3/metarig" index="0" unique_id=669769293]
bones/0/position = Vector3(-4.0885476e-11, 1.0625284, -0.0013082867)
bones/0/rotation = Quaternion(-0.008407199, 1.1920506e-07, -1.0022156e-09, 0.99996465)
bones/1/rotation = Quaternion(0.0044549946, 3.5272574e-15, 1.0621533e-09, 0.99999017)
bones/3/rotation = Quaternion(0.008452198, 0.36101636, -0.9211951, 0.14489801)
bones/4/rotation = Quaternion(0.43795875, -0.12773699, -0.0094399545, 0.8898238)
bones/5/rotation = Quaternion(-0.0727388, 0.9544648, 0.017236827, -0.28880617)
bones/6/rotation = Quaternion(-0.0051606367, 0.07963705, 0.98566246, 0.14866374)
bones/7/rotation = Quaternion(0.53299284, 0.15899026, 0.04329715, 0.82991934)
bones/8/rotation = Quaternion(0.10762185, 0.94213384, -0.0021075287, 0.31748515)
bones/9/rotation = Quaternion(0.93372935, -0.00023437705, -1.1553881e-05, 0.35797983)
bones/10/rotation = Quaternion(0.37892392, 0.0037527424, -0.0040516597, 0.9254114)
bones/11/rotation = Quaternion(-0.4815445, -0.043247957, -0.026411122, 0.8749554)
bones/12/rotation = Quaternion(0.9907214, -8.889601e-06, 0.0007662881, -0.13590702)
bones/13/rotation = Quaternion(0.19186154, -0.0020945955, 0.0037762083, 0.9814126)
bones/14/rotation = Quaternion(-0.42397684, 0.041418653, 0.029327026, 0.90425)

[node name="arml_biggun" parent="char_brickbot_3/metarig/Skeleton3D" index="0" unique_id=1694509074]
visible = false

[node name="arml_biggun_inside" parent="char_brickbot_3/metarig/Skeleton3D" index="1" unique_id=1172575608]
visible = false

[node name="arml_gunslinger" parent="char_brickbot_3/metarig/Skeleton3D" index="3" unique_id=1661816123]
visible = false

[node name="armr_biggun" parent="char_brickbot_3/metarig/Skeleton3D" index="5" unique_id=413123055]
visible = false

[node name="armr_biggun_inside" parent="char_brickbot_3/metarig/Skeleton3D" index="6" unique_id=1275747002]
visible = false

[node name="armr_gunslinger" parent="char_brickbot_3/metarig/Skeleton3D" index="8" unique_id=194740372]
visible = false

[node name="core_gunslinger" parent="char_brickbot_3/metarig/Skeleton3D" index="11" unique_id=378726768]
visible = false

[node name="hanl_bigsword" parent="char_brickbot_3/metarig/Skeleton3D" index="13" unique_id=224254547]
visible = false

[node name="hanl_pipe" parent="char_brickbot_3/metarig/Skeleton3D" index="14" unique_id=1502084912]
visible = false

[node name="hanl_sword" parent="char_brickbot_3/metarig/Skeleton3D" index="15" unique_id=2118118404]
visible = false

[node name="hanr_bigsword" parent="char_brickbot_3/metarig/Skeleton3D" index="16" unique_id=314171233]
visible = false

[node name="hanr_pipe" parent="char_brickbot_3/metarig/Skeleton3D" index="17" unique_id=1728140898]
visible = false

[node name="hanr_sword" parent="char_brickbot_3/metarig/Skeleton3D" index="18" unique_id=1842441916]
visible = false

[node name="hitbox" parent="char_brickbot_3/metarig/Skeleton3D" index="19" unique_id=1838852437]
visible = false

[node name="legs_gunslinger" parent="char_brickbot_3/metarig/Skeleton3D" index="21" unique_id=104979223]
visible = false

[node name="AnimationTree" type="AnimationTree" parent="char_brickbot_3" unique_id=897100888]
tree_root = SubResource("AnimationNodeStateMachine_0il8d")
advance_expression_base_node = NodePath("../..")
anim_player = NodePath("../AnimationPlayer")
"parameters/Attack State Machine/Small Range/Blend2/blend_amount" = 1.0
"parameters/Attack State Machine/Stick/Blend2/blend_amount" = 1.0
"parameters/Jump State Machine/JumpBlend/Blend2/blend_amount" = 0.06666667
"parameters/Jump State Machine/Landing Blend/Add2/add_amount" = 0.00909090909090909
parameters/Running-Blend/blend_position = Vector2(-0.10526317, 0.6018957)

[node name="AudioStreamPlayerJump" type="AudioStreamPlayer2D" parent="." unique_id=218870464]
stream = ExtResource("5_s4nun")
bus = &"SFX"

[editable path="old_char_brickbot_2"]
[editable path="char_brickbot_3"]
